--- a/wkQuiz/ihm-quizz/src/application/vue/EditerCategorie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerCategorie.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,23 +15,23 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1300.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControleurEditerCategorie">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1300.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControleurEditerCategorie">
    <children>
-      <Group layoutX="18.0" layoutY="18.0" onMouseClicked="#retour">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Label layoutY="70.0" prefHeight="57.0" prefWidth="104.0" text="Retour" textFill="WHITE">
+            <Label layoutY="80.0" prefHeight="57.0" prefWidth="104.0" text="Retour" textFill="WHITE">
                <font>
                   <Font name="Open Sans" size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Label layoutX="474.0" layoutY="18.0" prefHeight="58.0" prefWidth="439.0" text="Editez la catégorie" textFill="WHITE">
+      <Label layoutX="480.0" layoutY="50.0" prefHeight="58.0" prefWidth="329.0" text="Editez la catégorie" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
