--- a/wkQuiz/ihm-quizz/src/application/vue/EditerCategories.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerCategories.fxml
@@ -25,14 +25,14 @@
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Text fill="WHITE" layoutX="1.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retour">
+            <Text fill="WHITE" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retour">
                <font>
                   <Font name="Open Sans Regular" size="32.0" />
                </font>
             </Text>
          </children>
       </Group>
-      <Text fill="WHITE" layoutX="538.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditer une Catégorie  ">
+      <Text fill="WHITE" layoutX="534.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditer une Catégorie  ">
          <font>
             <Font name="Open Sans Regular" size="40.0" />
          </font>
@@ -48,7 +48,7 @@
             <Font size="20.0" />
          </font>
       </TextField>
-      <Button fx:id="CreerQuestionBouton" layoutX="1020.0" layoutY="38.0" mnemonicParsing="false" onAction="#versCreerCategorie" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Catégorie" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="CreerQuestionBouton" layoutX="1040.0" layoutY="46.0" mnemonicParsing="false" onAction="#versCreerCategorie" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Catégorie" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
