--- a/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EditerQuestions.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -12,100 +18,74 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0"
-	prefWidth="1450.0" style="-fx-background-color: #282C34;"
-	xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="application.controleurs.ControleurEditerQuestions">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1450.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControleurEditerQuestions">
 	<children>
 		<Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
 			<children>
-				<ImageView fitHeight="96.0" fitWidth="96.0"
-					pickOnBounds="true" preserveRatio="true">
+				<ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
 					<image>
 						<Image url="@images/IconeRetour.png" />
 					</image>
 				</ImageView>
-				<Text fill="WHITE" layoutY="112.0" strokeType="OUTSIDE"
-					strokeWidth="0.0" text="Retour">
+				<Text fill="WHITE" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retour">
 					<font>
 						<Font name="Open Sans Regular" size="32.0" />
 					</font>
 				</Text>
 			</children>
 		</Group>
-		<Text fill="WHITE" layoutX="538.0" layoutY="84.0"
-			strokeType="OUTSIDE" strokeWidth="0.0" text="Éditer une Question">
+		<Text fill="WHITE" layoutX="538.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Éditer une Question">
 			<font>
 				<Font name="Open Sans Regular" size="40.0" />
 			</font>
 		</Text>
-		<TableView fx:id="table" layoutX="80.0" layoutY="280.0"
-			prefWidth="1290.0" minWidth="1280.0" prefHeight="456.0"
-			stylesheets="@css/mainStyle.css" />
-		<Text fill="WHITE" layoutX="84.0" layoutY="196.0"
-			strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Question :">
+		<TableView fx:id="table" layoutX="80.0" layoutY="280.0" minWidth="1280.0" prefHeight="456.0" prefWidth="1290.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css" />
+		<Text fill="WHITE" layoutX="84.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la Question :">
 			<font>
 				<Font name="Open Sans Regular" size="24.0" />
 			</font>
 		</Text>
-		<TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0"
-			prefWidth="403.0" promptText="Nom de la question"
-			style="-fx-background-radius: 20px;">
+		<TextField layoutX="83.0" layoutY="206.0" prefHeight="52.0" prefWidth="403.0" promptText="Nom de la question" style="-fx-background-radius: 20px;">
 			<font>
 				<Font size="20.0" />
 			</font>
 		</TextField>
-		<Text fill="WHITE" layoutX="503.0" layoutY="196.0"
-			strokeType="OUTSIDE" strokeWidth="0.0" text="Catégorie :">
+		<Text fill="WHITE" layoutX="503.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Catégorie :">
 			<font>
 				<Font name="Open Sans Regular" size="24.0" />
 			</font>
 		</Text>
-		<TextField layoutX="502.0" layoutY="206.0" prefHeight="52.0"
-			prefWidth="403.0" promptText="Catégorie de la Question"
-			style="-fx-background-radius: 20px;">
+		<TextField layoutX="502.0" layoutY="206.0" prefHeight="52.0" prefWidth="403.0" promptText="Catégorie de la Question" style="-fx-background-radius: 20px;">
 			<font>
 				<Font size="20.0" />
 			</font>
 		</TextField>
-		<Text fill="WHITE" layoutX="916.0" layoutY="196.0"
-			strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulté :">
+		<Text fill="WHITE" layoutX="916.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Difficulté :">
 			<font>
 				<Font name="Open Sans Regular" size="24.0" />
 			</font>
 		</Text>
-		<CheckBox layoutX="917.0" layoutY="213.0"
-			mnemonicParsing="false" text="Facile" textFill="WHITE">
+		<CheckBox layoutX="917.0" layoutY="213.0" mnemonicParsing="false" text="Facile" textFill="WHITE">
 			<font>
 				<Font size="28.0" />
 			</font>
 		</CheckBox>
-		<CheckBox layoutX="1057.0" layoutY="213.0"
-			mnemonicParsing="false" text="Moyen" textFill="WHITE">
+		<CheckBox layoutX="1057.0" layoutY="213.0" mnemonicParsing="false" text="Moyen" textFill="WHITE">
 			<font>
 				<Font size="28.0" />
 			</font>
 		</CheckBox>
-		<CheckBox layoutX="1204.0" layoutY="213.0"
-			mnemonicParsing="false" text="Difficile" textFill="WHITE">
+		<CheckBox layoutX="1204.0" layoutY="213.0" mnemonicParsing="false" text="Difficile" textFill="WHITE">
 			<font>
 				<Font size="28.0" />
 			</font>
 		</CheckBox>
-		<Button fx:id="CreerQuestionBouton" layoutX="1010.0"
-			layoutY="28.0" mnemonicParsing="false" onAction="#versCreerQuestion"
-			onMouseClicked="#versCreerQuestion" prefHeight="80.0"
-			prefWidth="360.0"
-			style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;"
-			styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css"
-			text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
+		<Button fx:id="CreerQuestionBouton" layoutX="1010.0" layoutY="28.0" mnemonicParsing="false" onAction="#versCreerQuestion" onMouseClicked="#versCreerQuestion" prefHeight="80.0" prefWidth="360.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60px;" styleClass="cavajamaismarcher" stylesheets="@css/mainStyle.css" text="Créer une Question" textAlignment="CENTER" textFill="WHITE">
 			<font>
 				<Font size="24.0" />
 			</font>
 			<graphic>
-				<ImageView fitHeight="64.0" fitWidth="64.0"
-					styleClass="cavajamaismarcher">
+				<ImageView fitHeight="64.0" fitWidth="64.0" styleClass="cavajamaismarcher">
 					<image>
 						<Image url="@images/IconeCreer.png" />
 					</image>
