--- a/wkQuiz/ihm-quizz/src/application/vue/ModeEnLigne.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ModeEnLigne.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurModeEnLigne">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurModeEnLigne">
    <children>
       <Text fill="WHITE" layoutX="370.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode En-ligne" textAlignment="CENTER">
          <font>
@@ -42,7 +48,7 @@
       </Button>
       <Group layoutX="42.0" layoutY="30.0" onMouseClicked="#retour">
          <children>
-            <Label layoutX="-1.0" layoutY="74.0" text="Retour" textFill="WHITE">
+            <Label layoutX="-1.0" layoutY="74.0" text="Accueil" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
