--- a/wkQuiz/ihm-quizz/src/application/vue/ParametrePartie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ParametrePartie.fxml
@@ -24,7 +24,7 @@
    <children>
       <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retourAccueil">
          <children>
-            <Label layoutY="80.0" prefHeight="57.0" prefWidth="128.0" text="Retour" textFill="#fcfcfc">
+            <Label layoutY="80.0" prefHeight="57.0" prefWidth="128.0" text="Accueil" textFill="#fcfcfc">
                <font>
                   <Font size="32.0" />
                </font>
