--- a/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/RepondreQuestion.fxml
@@ -21,39 +21,39 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1400.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.ControleurRepondreQuestion">
    <children>
-      <Group onMouseClicked="#quitterQuiz" layoutX="32.0" layoutY="20.0">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#quitterQuiz">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Label layoutX="1.0" layoutY="76.0" text="Retour" textFill="WHITE">
+            <Label layoutY="80.0" text="Retour" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Group layoutX="1275.0" layoutY="27.0" onMouseClicked="#aider">
+      <Group layoutX="1280.0" layoutY="20.0" onMouseClicked="#aider">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeAide.png" />
                </image>
             </ImageView>
-            <Label layoutX="16.0" layoutY="82.0" text="Aide" textFill="WHITE">
-               <font>
-                  <Font size="32.0" />
-               </font>
-            </Label>
-            <Label fx:id="difficulte" layoutX="-155.0" layoutY="138.0" prefHeight="47.0" prefWidth="283.0" text="Difficultée : " textFill="WHITE">
+            <Label layoutX="15.0" layoutY="80.0" text="Aide" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
+      <Label fx:id="difficulte" layoutX="1056.0" layoutY="149.0" prefHeight="47.0" prefWidth="283.0" text="Difficultée : " textFill="WHITE">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Label>
       <Label fx:id="numero" layoutX="589.0" layoutY="53.0" prefHeight="58.0" prefWidth="283.0" text="Question n°" textFill="WHITE">
          <font>
             <Font size="40.0" />
