--- a/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Resultat.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -9,23 +15,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurResultat">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.jouer.ControleurResultat">
    <children>
-      <Group layoutX="24.0" layoutY="14.0" onMouseClicked="#retourAccueil">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retourAccueil">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" layoutX="-3.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeAcceuil.png" />
                </image>
             </ImageView>
-            <Label layoutY="74.0" text="Accueil" textFill="WHITE">
+            <Label layoutY="80.0" text="Accueil" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Label layoutX="424.0" layoutY="58.0" text="Résultat" textFill="WHITE">
+      <Label layoutX="430.0" layoutY="55.0" text="Résultat" textFill="WHITE">
          <font>
             <Font name="Open Sans" size="40.0" />
          </font>
