--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixEnvoie.fxml
@@ -11,30 +11,30 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurChoixEnvoie">
    <children>
-      <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Label layoutY="75.0" text="Retour" textFill="WHITE">
+            <Label layoutY="80.0" text="Retour" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Label layoutX="200.0" layoutY="60.0" text="Choissisez les questions a envoyer" textFill="WHITE">
+      <Label layoutX="198.0" layoutY="80.0" text="Choissisez les questions à envoyer" textFill="WHITE">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
       <Group layoutX="30.0" layoutY="245.0" onMouseClicked="#envoieTous">
          <children>
-            <Button mnemonicParsing="false" prefHeight="210.0"  onAction="#envoieTous" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer  toutes les Questions " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button mnemonicParsing="false" onAction="#envoieTous" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer toutes les questions " textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font size="28.0" />
+                  <Font size="26.0" />
                </font>
             </Button>
             <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="111.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
@@ -51,7 +51,7 @@
                   <Image url="@images/IconeAide.png" />
                </image>
             </ImageView>
-            <Label layoutX="19.0" layoutY="83.0" text="Aide" textFill="WHITE">
+            <Label layoutX="15.0" layoutY="80.0" text="Aide" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
@@ -61,9 +61,9 @@
       <Separator layoutX="629.0" layoutY="245.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="85.0" />
       <Group layoutX="700.0" layoutY="245.0" onMouseClicked="#envoieCategorie">
          <children>
-            <Button mnemonicParsing="false" onAction="#envoieCategorie" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Choisir les question par catégorie " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button mnemonicParsing="false" onAction="#envoieCategorie" prefHeight="210.0" prefWidth="285.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Choisir les questions par catégorie " textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font size="28.0" />
+                  <Font size="26.0" />
                </font>
             </Button>
             <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="113.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true">
@@ -76,9 +76,9 @@
       <Separator layoutX="298.0" layoutY="243.0" orientation="VERTICAL" prefHeight="210.0" prefWidth="75.0" />
       <Group layoutX="375.0" layoutY="245.0" onMouseClicked="#envoieQuestion">
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#envoieQuestion" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionné les question a l'unité" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#envoieQuestion" prefHeight="210.0" prefWidth="270.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Sélectionner les questions à l'unitée" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font size="28.0" />
+                  <Font size="26.0" />
                </font>
             </Button>
             <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="103.0" layoutY="147.0" pickOnBounds="true" preserveRatio="true">
