--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixQuestionExport.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixQuestionExport.fxml
@@ -12,21 +12,21 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="1180.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurSelectionQuestion">
    <children>
-      <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Label layoutX="4.0" layoutY="75.0" text="Retour" textFill="WHITE">
+            <Label layoutY="80.0" text="Retour" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Label layoutX="350.0" layoutY="60.0" text="Choissisez Les Questions " textFill="WHITE">
+      <Label layoutX="278.0" layoutY="68.0" text="Choissisez les questions à envoyer" textFill="WHITE">
          <font>
             <Font size="40.0" />
          </font>
@@ -43,7 +43,7 @@
             <Font size="32.0" />
          </font>
       </Button>
-      <TableView layoutX="90.0" layoutY="286.0" prefHeight="350.0" prefWidth="1000.0" fx:id="tableView" stylesheets="@css/mainStyle.css">
+      <TableView fx:id="tableView" layoutX="90.0" layoutY="286.0" prefHeight="350.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css">
          <columns>
             <TableColumn fx:id="libelleQuestion" prefWidth="333.0" text="Libellé de la question" />
             <TableColumn fx:id="categorieQuestion" prefWidth="333.0" text="Catégorie de la question " />
