--- a/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
@@ -13,14 +13,14 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurEnvoieQuestion">
    <children>
-      <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Label layoutY="75.0" text="Retour" textFill="WHITE">
+            <Label layoutY="90.0" text="Retour" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
@@ -34,7 +34,7 @@
                   <Image url="@images/IconeAide.png" />
                </image>
             </ImageView>
-            <Label layoutX="19.0" layoutY="86.0" text="Aide" textFill="WHITE">
+            <Label layoutX="15.0" layoutY="90.0" text="Aide" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
@@ -51,12 +51,12 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Text fx:id="txtPort" fill="WHITE" layoutX="470.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+      <Text fx:id="txtPort" fill="WHITE" layoutX="469.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
             <Font size="32.0" />
          </font>
       </Text>
-      <Label layoutX="300.0" layoutY="300.0" text="Votre Ip : " textFill="WHITE">
+      <Label layoutX="300.0" layoutY="300.0" text="Votre IP : " textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
