--- a/wkQuiz/ihm-quizz/src/application/vue/Recapitulatif.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/Recapitulatif.fxml
@@ -12,31 +12,31 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurRecapitulatif">
    <children>
-      <Group layoutX="40.0" layoutY="20.0" onMouseClicked="#retour">
+      <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
             <ImageView fitHeight="96.0" fitWidth="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/IconeRetour.png" />
                </image>
             </ImageView>
-            <Label layoutX="3.0" layoutY="75.0" text="Retour" textFill="WHITE">
+            <Label layoutY="80.0" text="Retour" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
          </children>
       </Group>
-      <Label layoutX="307.0" layoutY="50.0" text="Recapitulatif de vos envoies" textFill="WHITE">
+      <Label layoutX="307.0" layoutY="50.0" text="Récapitulatif de vos envois" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <TableView fx:id="tableRecap" layoutX="10.0" layoutY="175.0" prefHeight="392.0" prefWidth="980.0" stylesheets="@css/mainStyle.css">
+      <TableView fx:id="tableRecap" layoutX="10.0" layoutY="175.0" prefHeight="392.0" prefWidth="980.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css">
          <columns>
-            <TableColumn fx:id="libelleQuestion" prefWidth="250.0" text="Libéllé Question " />
+            <TableColumn fx:id="libelleQuestion" prefWidth="250.0" text="Libellé Question " />
             <TableColumn fx:id="categorie" prefWidth="196.0" text="Catégorie" />
-            <TableColumn fx:id="difficulte" prefWidth="150.0" text="Difficulté" />
-            <TableColumn fx:id="repVrai" minWidth="196.0" prefWidth="400.0" text="Réponse vrai " />
+            <TableColumn fx:id="difficulte" prefWidth="150.0" text="Difficultée" />
+            <TableColumn fx:id="repVrai" minWidth="196.0" prefWidth="400.0" text="Réponse vraie" />
          </columns>
       </TableView>
       <Button layoutX="365.0" layoutY="604.0" mnemonicParsing="false" onAction="#valider" prefHeight="62.0" prefWidth="276.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Valider" textFill="WHITE">
