--- a/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurEnvoieQuestion">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurEnvoieQuestion">
    <children>
       <Group layoutX="30.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
@@ -56,7 +56,7 @@
             <Font size="32.0" />
          </font>
       </Text>
-      <Label layoutX="300.0" layoutY="300.0" text="Votre Ip : " textFill="WHITE">
+      <Label layoutX="300.0" layoutY="300.0" text="Votre IP : " textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
