--- a/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -51,27 +50,17 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Text fx:id="txtPort" fill="WHITE" layoutX="469.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+      <Text fx:id="txtPort" fill="WHITE" layoutX="484.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
          <font>
             <Font size="32.0" />
          </font>
       </Text>
-      <Label layoutX="300.0" layoutY="300.0" text="Votre IP : " textFill="WHITE">
+      <Label layoutX="333.0" layoutY="301.0" text="Votre IP : " textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
-      <Button layoutX="176.0" layoutY="470.0" mnemonicParsing="false" onAction="#envoyer" prefHeight="86.0" prefWidth="268.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Envoyer" textFill="WHITE">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </Button>
-      <TextField fx:id="txtIP" editable="false" layoutX="444.0" layoutY="289.0" prefHeight="69.0" prefWidth="268.0" style="-fx-background-radius: 32px;">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </TextField>
-      <Button layoutX="562.0" layoutY="470.0" mnemonicParsing="false" onAction="#lancerServeur" prefHeight="86.0" prefWidth="300.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Lancer Serveur" textFill="WHITE">
+      <Button layoutX="264.0" layoutY="458.0" mnemonicParsing="false" onAction="#connexionEtEnvoie" prefHeight="86.0" prefWidth="441.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Se connecter et envoyer" textFill="WHITE">
          <font>
             <Font size="32.0" />
          </font>
@@ -85,5 +74,10 @@
             </Text>
          </children>
       </HBox>
+      <Text fx:id="txtIP" fill="WHITE" layoutX="484.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
