--- a/wkQuiz/ihm-quizz/src/application/vue/ChoixQuestionExport.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/ChoixQuestionExport.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +16,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="1180.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurSelectionQuestion">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="1180.0" style="-fx-background-color: #282C34;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleurs.reseau.ControleurSelectionQuestion">
    <children>
       <Group layoutX="32.0" layoutY="20.0" onMouseClicked="#retour">
          <children>
@@ -43,11 +49,11 @@
             <Font size="32.0" />
          </font>
       </Button>
-      <TableView fx:id="tableView" layoutX="90.0" layoutY="286.0" prefHeight="350.0" prefWidth="1000.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css">
+      <TableView fx:id="tableView" layoutX="90.0" layoutY="286.0" prefHeight="350.0" prefWidth="1079.0" style="-fx-background-color: #282C34;" stylesheets="@css/mainStyle.css">
          <columns>
-            <TableColumn fx:id="libelleQuestion" prefWidth="333.0" text="Libellé de la question" />
-            <TableColumn fx:id="categorieQuestion" prefWidth="333.0" text="Catégorie de la question " />
-            <TableColumn fx:id="selection" prefWidth="333.0" text="Sélectionner" />
+            <TableColumn fx:id="libelleQuestion" prefWidth="319.0" text="Libellé de la question" />
+            <TableColumn fx:id="categorieQuestion" prefWidth="327.0" text="Catégorie de la question " />
+            <TableColumn fx:id="selection" prefWidth="295.0" text="Sélectionner" />
          </columns>
       </TableView>
    </children>
